crates/canvas-cli/tests/e2e/snapshots/identity_remove_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
removed identity <identity>
--- stderr ---
