crates/canvas-cli/tests/e2e/snapshots/m6c_watch_once.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "announcements",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "window:2040-09-08..2040-09-21:ctx:f1ede85063de36b37686b6a5c9b998529aa2e850578229c284e68956c7d1ba8f",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "assignments",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "course:60100",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "courses",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "active",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "enrollment_grades",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "period:none",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "inbox_unread",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "all",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "missing",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "all",
      "source": "network",
      "stale": false
    },
    {
      "complete": true,
      "count": 1,
      "dataset": "planner",
      "fetched_at": "2040-09-09T17:05:12Z",
      "scope": "window:2040-09-08..2040-09-21",
      "source": "network",
      "stale": false
    }
  ],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 7,
    "cost": null,
    "storage": 0
  },
  "result": {
    "cursor": null,
    "datasets": [
      {
        "complete": true,
        "count": 1,
        "dataset": "announcements",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "window:2040-09-08..2040-09-21:ctx:f1ede85063de36b37686b6a5c9b998529aa2e850578229c284e68956c7d1ba8f",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "assignments",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "course:60100",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "courses",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "active",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "enrollment_grades",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "period:none",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "inbox_unread",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "all",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "missing",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "all",
        "source": "network",
        "stale": false
      },
      {
        "complete": true,
        "count": 1,
        "dataset": "planner",
        "error": null,
        "fetched_at": "2040-09-09T17:05:12Z",
        "requests": 1,
        "scope": "window:2040-09-08..2040-09-21",
        "source": "network",
        "stale": false
      }
    ],
    "events": 0,
    "resync_required": false,
    "since": null,
    "skipped": null,
    "ticks": 1
  },
  "schema": "canvas-cli/watch@1",
  "warnings": []
}
