crates/canvas-cli/tests/e2e/snapshots/m6c_watch_stream.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
{"schema":"canvas-cli/event@1","cursor":"1","kind":"due.changed","observed_at":"2026-09-09T18:05:12Z","observed_at_local":"2026-09-09T14:05:12-04:00","identity":{"origin":"<origin>","user_id":"1","key":"<identity>"},"generation":"<generation>","dataset":"assignments","scope":"course:100","entity_key":"9","before":{"due_at":"2026-09-20T03:59:00Z"},"after":{"due_at":"2026-09-30T03:59:00Z"}}
{"schema":"canvas-cli/watch@1","generated_at":"2026-09-09T18:05:12Z","profile":null,"identity":{"origin":"<origin>","user_id":"1","key":"<identity>"},"freshness":[{"dataset":"announcements","scope":"window:2026-09-08..2026-09-21:ctx:ad57366865126e55649ecb23ae1d48887544976efea46a48eb5d85a6eeb4d306","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false},{"dataset":"assignments","scope":"course:100","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false},{"dataset":"courses","scope":"active","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false},{"dataset":"enrollment_grades","scope":"period:none","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false},{"dataset":"missing","scope":"all","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false},{"dataset":"planner","scope":"window:2026-09-08..2026-09-21","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false}],"requests":{"api":6,"storage":0,"cost":null},"partial":[],"warnings":[],"outcome":"ok","exit":0,"result":{"since":null,"cursor":"1","events":1,"ticks":1,"resync_required":false,"skipped":null,"datasets":[{"dataset":"announcements","scope":"window:2026-09-08..2026-09-21:ctx:ad57366865126e55649ecb23ae1d48887544976efea46a48eb5d85a6eeb4d306","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null},{"dataset":"assignments","scope":"course:100","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null},{"dataset":"courses","scope":"active","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null},{"dataset":"enrollment_grades","scope":"period:none","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null},{"dataset":"missing","scope":"all","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null},{"dataset":"planner","scope":"window:2026-09-08..2026-09-21","source":"network","fetched_at":"2026-09-09T18:05:12Z","complete":true,"count":1,"stale":false,"requests":1,"error":null}]}}
--- stderr ---
