crates/canvas-cli/tests/e2e/snapshots/modules_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [
    {
      "complete": true,
      "count": 1,
      "dataset": "modules",
      "fetched_at": "2026-09-09T17:05:12Z",
      "scope": "course:100",
      "source": "cache",
      "stale": false
    }
  ],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "course_id": "100",
    "modules": [
      {
        "id": "30",
        "items": [
          {
            "completed": null,
            "content_id": "501",
            "html_url": null,
            "id": "31",
            "lock_explanation": null,
            "locked": false,
            "position": 1,
            "title": "Reading",
            "type": "File"
          }
        ],
        "items_complete": true,
        "items_count": 1,
        "name": "Week 1",
        "position": 1,
        "state": "unlocked"
      }
    ]
  },
  "schema": "canvas-cli/modules@1",
  "warnings": []
}
