crates/canvas-cli/tests/e2e/snapshots/modules_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  ID         NAME                  POS    STATE       ITEMS    COMPLETE  
  60030      Synthetic Module      1      unlocked    1        yes       
    60031      Synthetic Module    1      File        60501              
--- stderr ---
