crates/canvas-cli/tests/e2e/snapshots/new_quizzes_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  ID       ASSIGNMENT    TITLE                 DUE                     POINTS    TIME    ATTEMPTS  
  60201    69013         Synthetic New Quiz    2040-09-18T23:59:00Z    12        30m     2         
--- stderr ---
