crates/canvas-cli/tests/e2e/snapshots/open_announcement_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "id": "40",
    "launched": false,
    "target_kind": "announcement",
    "url": "<origin>/courses/100/discussion_topics/40"
  },
  "schema": "canvas-cli/open@1",
  "warnings": []
}
