crates/canvas-cli/tests/e2e/snapshots/open_announcement_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
announcement <origin>/courses/60100/discussion_topics/60040 launched=false
--- stderr ---
